--- a/index.html
+++ b/index.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Derrick: Personal site and portfolio.</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Derrick Dollesin</h1>
-    <p>I am a senior at UC San Diego studying Data Science.</p>
+    <div title="Header">
+        <h1>Derrick Dollesin</h1>
+
+        <div title="Navigation Bar">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="projects/index.html">Projects</a></li>
+                <li><a href="contact/index.html">Contact</a></li>
+                <li><a href="resume/index.html">Resume</a></li>
+                <li><a href="https://github.com/derrickdollesin/" target="_blank">Github</a></li>
+            </ul>
+        </div>
+
+        <p>I am a senior at UC San Diego studying Data Science. </p>
+
+        <img src="images/meatmonster.jpg" alt="Me on my first day as an intern at Monster Energy." width="375" height="375">
+    </div>
+
 </body>
 </html>
