--- a/projects/index.html
+++ b/projects/index.html
@@ -8,18 +8,79 @@
 </head>
 <body>
     <div title="Header">
-        <h1>Projects</h1>
-
-        <div title="Navigation Bar">
+        <nav>
             <ul>
                 <li><a href="../index.html">Home</a></li>
-                <li><a href="index.html">Projects</a></li>
+                <li><a href="index.html" class="current">Projects</a></li>
                 <li><a href="../contact/index.html">Contact</a></li>
                 <li><a href="../resume/index.html">Resume</a></li>
                 <li><a href="https://github.com/derrickdollesin/" target="_blank">Github</a></li>
             </ul>
-        </div>
+        </nav>
+        <h1>Projects</h1>
 
+        <div class="projects">
+            <article>
+                <h2>Lorem ipsum dolor sit.</h2>
+                <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eius, incidunt impedit placeat voluptates et quas ad laborum inventore odio sequi? A est modi laboriosam hic? Quo praesentium laborum odit harum!</p>
+            </article>
+            <article>
+                <h2>Placeat ipsa enim autem.</h2>
+                <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+                <p>Ea minus non error? Quo sint eius eligendi eveniet nostrum iusto assumenda quod ducimus tempore consequatur dolore eos necessitatibus porro, sed, error deserunt. Vitae id vero impedit reiciendis modi unde!</p>
+            </article>
+            <article>
+                <h2>Soluta error animi culpa?</h2>
+                <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+                <p>Molestias ratione molestiae fugit laborum reiciendis, dignissimos voluptatibus asperiores blanditiis debitis quas, numquam nam non repudiandae unde sunt neque ex ipsa modi est corrupti porro. Reprehenderit nisi voluptatem explicabo aliquid!</p>
+            </article>
+            <article>
+                <h2>Impedit repudiandae iste earum!</h2>
+                <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+                <p>Illo veniam, facere doloremque vel voluptatum blanditiis esse maiores eligendi aut ipsum, at consequatur sequi dolore fugiat repudiandae quod est exercitationem ab laboriosam eum distinctio accusantium atque quidem cum. Delectus.</p>
+            </article>
+            <article>
+                <h2>Modi voluptatibus quidem facilis!</h2>
+                <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+                <p>Delectus dignissimos error dicta quis numquam, eligendi minima iste maiores hic sit atque quaerat architecto temporibus at minus? Ut molestiae quia illum molestias quaerat nostrum minima vero. Officiis, facere! Blanditiis.</p>
+            </article>
+            <article>
+                <h2>Perferendis sint labore incidunt!</h2>
+                <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+                <p>Alias voluptas facilis error cupiditate repellat. Corporis autem repudiandae, est cumque qui impedit ab possimus voluptas a quo, nobis, debitis alias et officia voluptatem ex neque doloremque asperiores quos distinctio!</p>
+            </article>
+            <article>
+                <h2>Modi laborum ab expedita!</h2>
+                <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+                <p>Quisquam consequuntur necessitatibus placeat repellendus ipsa reprehenderit consequatur excepturi tempora rem nostrum ea molestiae tempore corporis deleniti quam, cum perspiciatis eum, optio laboriosam voluptatum fuga aut. Quidem deserunt aperiam libero?</p>
+            </article>
+            <article>
+                <h2>Unde non repudiandae et!</h2>
+                <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+                <p>Consequatur at rem exercitationem esse ex animi vitae et nam laborum laboriosam, aperiam maiores. Odio facilis nam possimus consectetur asperiores cum, aliquid eligendi laborum quis dolores eius, illum pariatur debitis?</p>
+            </article>
+            <article>
+                <h2>Laborum fuga est voluptate?</h2>
+                <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+                <p>Nostrum vel sunt, ex saepe perferendis earum labore, et itaque sed illum velit. Doloribus, debitis, ex officia molestias necessitatibus hic commodi praesentium quibusdam, quisquam ratione porro sit at! Provident, quidem.</p>
+            </article>
+            <article>
+                <h2>Illo, aut ad. Deserunt?</h2>
+                <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+                <p>Nobis cupiditate cumque error a id aspernatur asperiores ab architecto deleniti aperiam. Id perferendis dolorem, facere porro aliquam velit quisquam natus eveniet quasi excepturi, dignissimos expedita dicta illum consequuntur ratione.</p>
+            </article>
+            <article>
+                <h2>Odit voluptate reprehenderit explicabo.</h2>
+                <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+                <p>Illum minus eum impedit provident facilis soluta, odit quod itaque sint modi mollitia nostrum corporis unde magnam, maxime sunt nobis, doloribus excepturi architecto magni eligendi esse maiores! Adipisci, dolore reiciendis.</p>
+            </article>
+            <article>
+                <h2>Voluptate minus iusto molestias?</h2>
+                <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+                <p>Ab modi blanditiis consectetur eius numquam, aspernatur repellat eaque? Ducimus a repellendus asperiores impedit, explicabo error necessitatibus nesciunt eos sit omnis nemo exercitationem ea! Possimus enim consequuntur aliquid animi cum.</p>
+            </article>
+        </div>
     </div>
 </body>
 </html>
