--- a/resume/index.html
+++ b/resume/index.html
@@ -8,17 +8,19 @@
 </head>
 <body>
     <div title="Header">
-        <h1>Resume</h1>
 
-        <div title="Navigation Bar">
+        <nav>
             <ul>
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="../projects/index.html">Projects</a></li>
                 <li><a href="../contact/index.html">Contact</a></li>
-                <li><a href="index.html">Resume</a></li>
+                <li><a href="index.html" class="current">Resume</a></li>
                 <li><a href="https://github.com/derrickdollesin/" target="_blank">Github</a></li>
             </ul>
-        </div>
+        </nav>
+        <h1>Resume</h1>
+
+    
     </div>
 
     <div title="Resume">
@@ -48,6 +50,19 @@
 
         <section title="Experience">
             <h3>Experience</h3>
+
+            <article>
+                <strong>Monster Energy - Data Analyst</strong>
+                <br>
+                Corona, California
+                <br>
+                October 2025 - Present
+                
+                <ul>
+                    <li>Reconcile depletion data between distributors and bottlers.</li>
+                </ul>
+
+            </article>
 
             <article>
                 <strong>Monster Energy - Data Engineer</strong>
