--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div title="Header">
-        <h1>Derrick Dollesin</h1>
+    <nav>
+        <ul>
+            <li><a href="index.html" class="current">Home</a></li>
+            <li><a href="projects/index.html">Projects</a></li>
+            <li><a href="contact/index.html">Contact</a></li>
+            <li><a href="resume/index.html">Resume</a></li>
+            <li><a href="https://github.com/derrickdollesin/" target="_blank">Github</a></li>
+        </ul>
+    </nav>
 
-        <div title="Navigation Bar">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="projects/index.html">Projects</a></li>
-                <li><a href="contact/index.html">Contact</a></li>
-                <li><a href="resume/index.html">Resume</a></li>
-                <li><a href="https://github.com/derrickdollesin/" target="_blank">Github</a></li>
-            </ul>
-        </div>
+    <div class="home">
+        <h1>Derrick Dollesin</h1>
 
         <p>I am a senior at UC San Diego studying Data Science. </p>
 
