--- a/resume/index.html
+++ b/resume/index.html
@@ -8,16 +8,6 @@
 </head>
 <body>
     <div title="Header">
-
-        <nav>
-            <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="../projects/index.html">Projects</a></li>
-                <li><a href="../contact/index.html">Contact</a></li>
-                <li><a href="index.html" class="current">Resume</a></li>
-                <li><a href="https://github.com/derrickdollesin/" target="_blank">Github</a></li>
-            </ul>
-        </nav>
         <h1>Resume</h1>
 
     
@@ -85,5 +75,6 @@ Salesforce and internal reporting tools. </li>
             </article>
         </section>
     </div>
+    <script type="module" src="../global.js"></script>
 </body>
 </html>
