--- a/contact/index.html
+++ b/contact/index.html
@@ -8,24 +8,12 @@
 </head>
 <body>
     <div title="Header">
-        <nav>
-            <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="../projects/index.html">Projects</a></li>
-                <li><a href="index.html" class="current">Contact</a></li>
-                <li><a href="../resume/index.html">Resume</a></li>
-                <li><a href="https://github.com/derrickdollesin/" target="_blank">Github</a></li>
-            </ul>
-        </nav>
         <h1>Contact</h1>
 
     </div>
 
     <div title="Email Form">
-        <form action="mailto:dollesinderrick@gmail.com" method="POST" enctype="text/plain">
-            <label>Email:<input name="email" type="email"></label>
-            
-
+        <form action="mailto:dollesinderrick@gmail.com" method="get">            
             <label>Subject:<input name="subject"></label>
             
 
@@ -35,5 +23,6 @@
             <button>Submit</button>
         </form>
     </div>
+    <script type="module" src="../global.js"></script>
 </body>
 </html>
