--- a/index.html
+++ b/index.html
@@ -7,23 +7,21 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="index.html" class="current">Home</a></li>
-            <li><a href="projects/index.html">Projects</a></li>
-            <li><a href="contact/index.html">Contact</a></li>
-            <li><a href="resume/index.html">Resume</a></li>
-            <li><a href="https://github.com/derrickdollesin/" target="_blank">Github</a></li>
-        </ul>
-    </nav>
-
     <div class="home">
+        <!-- <label class="color-scheme">
+            <select>
+                <option>Automatic</option>
+                <option>Dark</option>
+                <option>Light</option>
+            </select>
+        </label> -->
+
         <h1>Derrick Dollesin</h1>
 
         <p>I am a senior at UC San Diego studying Data Science. </p>
 
         <img src="images/meatmonster.jpg" alt="Me on my first day as an intern at Monster Energy." width="375" height="375">
     </div>
-
+    <script type="module" src="global.js"></script>
 </body>
 </html>
