--- a/projects/index.html
+++ b/projects/index.html
@@ -8,15 +8,6 @@
 </head>
 <body>
     <div title="Header">
-        <nav>
-            <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="index.html" class="current">Projects</a></li>
-                <li><a href="../contact/index.html">Contact</a></li>
-                <li><a href="../resume/index.html">Resume</a></li>
-                <li><a href="https://github.com/derrickdollesin/" target="_blank">Github</a></li>
-            </ul>
-        </nav>
         <h1>Projects</h1>
 
         <div class="projects">
@@ -82,5 +73,6 @@
             </article>
         </div>
     </div>
+    <script type="module" src="../global.js"></script>
 </body>
 </html>
