--- a/index.html
+++ b/index.html
@@ -8,20 +8,22 @@
 </head>
 <body>
     <div class="home">
-        <!-- <label class="color-scheme">
-            <select>
-                <option>Automatic</option>
-                <option>Dark</option>
-                <option>Light</option>
-            </select>
-        </label> -->
 
         <h1>Derrick Dollesin</h1>
 
         <p>I am a senior at UC San Diego studying Data Science. </p>
 
         <img src="images/meatmonster.jpg" alt="Me on my first day as an intern at Monster Energy." width="375" height="375">
+
+        <h2>Latest Projects</h2>
+        <div class="projects">
+        <!-- Dynamically added content will appear here -->
+        </div>
+
+        <div id="profile-stats"></div>
     </div>
+
     <script type="module" src="global.js"></script>
+    <script type="module" src="index.js" defer></script>
 </body>
 </html>
