--- a/projects/index.html
+++ b/projects/index.html
@@ -10,6 +10,22 @@
     <div title="Header">
         <h1 class="projects-title">Projects</h1>
 
+        <div class="container">
+            <svg class="projects-pie-plot" viewBox="-50 -50 100 100">
+                <!-- ... -->
+            </svg>
+            <ul class="legend">
+                <!-- ... -->
+            </ul>
+        </div>
+
+        <input
+            class="searchBar"
+            type="search"
+            aria-label="Search projects"
+            placeholder="🔍 Search projects…"
+        />
+
         <div class="projects"></div>
 
     </div>
